--- a/src/components/layout/Container/Container.module.css
+++ b/src/components/layout/Container/Container.module.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
   padding: 0 var(--padding-2);
   box-sizing: border-box;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 .fluid {
