--- a/src/components/organisms/Header/Header.module.css
+++ b/src/components/organisms/Header/Header.module.css
@@ -16,7 +16,7 @@
   width: 100vw;
   max-width: 100vw;
   box-sizing: border-box;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   transition: transform 0.3s ease, box-shadow 0.3s ease, padding 0.3s ease;
   transform: translateY(0);
 }
@@ -79,7 +79,6 @@
 
 /* Responsive styles */
 @media (min-width: 1200px) {
-
 }
 
 @media (max-width: 768px) {
